@@ -731,8 +731,10 @@ valueType org.fenixedu.academic.domain.util.i18n.Languages as Languages {
     }
     
     class SchoolClass  {
-        Integer anoCurricular;
-        String nome;
+        Integer curricularYear;
+        String name;
+        Integer anoCurricular; // deprecated
+        String nome; // deprecated
     }
 
     class Shift  {      
